sửa đăng nhập, đăng ký